# canary-server

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-uv.txt  requirements.txt  run_asr_endpoint.sh  setup.py  setup_asr_endpoint.sh  test_asr_endpoint.sh
.github/workflows/: ci.yml
docs/: configuration.md  cpu_optimization.md  parallel_processing.md  runbook.md  uv_setup.md
examples/: transcribe_example.py
prometheus/: prometheus.yml
scripts/: generate_test_audio.py  run_asr_endpoint.sh  test_asr_endpoint.sh
src/: nemo_openai_server.py  nemo_openai_server_refactored.py
tests/: benchmark.py  conftest.py  test_cpu_optimization.py  test_endpoint.py  test_parallel_loading.py  test_server.py
